# Ai_tms

./: .None.log.swp  .env2.save  .gitignore  APP.MD  Dockerfile  New Text Document.txt  README.md  ai_tms_web.entrypoint.sh  ailaysa.yml  ailaysa_admin.sql  celerybeat-schedule  current_session.py  data.pkl  db002.sqlite3-journal  docker-compose.staging-v4.yml.save  docker-compose.staging.yml.save  express_try.py  file_name.docx  file_name.docxmqbl3q7d.tmp  file_name.py  gunicorn_config.py  list_of_tables.txt  local_settings.py  manage.py  my-data.pkl  mydoc-project-try.py  newrelic-infra.yml  newrelic.ini  price  pyproject.toml  req.txt  requirements.txt  rest.txt  s.py  sample.tmx  setup.cfg  sonar-project.properties  tamil_test_out(ta-en).txt  test_content.py  vendor_try.py
Docker/: Dockerfile
ai_auth/: Aiwebhooks.py  access_policies.py  admin.py  ai_adapter.py  api_views.py  apps.py  authentication.py  checks.py  cron.py  custom_middleware.py  email_backend.py  enums.py  forms.py  global_access_conditions.py  helpers.py  managers.py  models.py  reports.py  s.py  serializers.py  signals.py  soc_auth.py  storage_backends.py  tasks.py  tests.py  urls.py  utils.py  validators.py  vendor_onboard_list.py
ai_bi/: admin.py  api_views.py  apps.py  forms.py  models.py  permissions.py  reports.py  serializers.py  signals.py  urls.py
ai_canvas/: admin.py  api_views.py  apps.py  cmyk_conversion.py  color.py  meta.py  models.py  pagination.py  serializers.py  standard_template.py  template.py  template_json.py  urls.py  utils.py
ai_exportpdf/: admin.py  apps.py  convertio_ocr_lang.py  models.py  serializer.py  urls.py  utils.py  views.py
ai_glex/: admin.py  api_views.py  apps.py  manager.py  models.py  serializers.py  signals.py  urls.py
ai_imagetranslation/: admin.py  api_views.py  apps.py  lamamodel_process.py  models.py  serializer.py  urls.py  utils.py
ai_marketplace/: api_views.py  apps.py  channels_auth.py  consumers.py  forms.py  models.py  notification_consumers.py  routing.py  serializers.py  signals.py  urls.py  views.py
ai_nlp/: admin.py  api_views.py  apps.py  models.py  serializer.py  urls.py  utils.py
ai_openai/: admin.py  api_views.py  apps.py  html2docx_custom.py  models.py  serializers.py  signals.py  urls.py  utils.py
ai_pay/: admin.py  api_views.py  apps.py  models.py  serializer.py  serializers.py  signals.py  urls.py
ai_qa/: api_views.py  apps.py  models.py  serializers.py  signals.py  urls.py
ai_staff/: admin.py  api_views.py  api_views.py.save  apps.py  forms.py  models.py  serializer.py  urls.py  views.py
ai_tm/: algorithms.py  api_views.py  apps.py  (+6 more)
(+559 files in other folders)
