[tool.poetry]
name = "ai_tms"
version = "1.9.0"
description = "Ailaysa Translation Managment System"
authors = ["Ailaysa"]

[tool.poetry.dependencies]
python = "^3.10"
django = "3.2.12"
dj-stripe = "2.7.0a8"
celery = "5.1.2"
djangorestframework = "3.12.4"
channels = "3.0.3"
django-storages = "^1.13.1"
django-filter = "^22.1"
nltk = "3.5"
openai = "0.28.0"
daphne = "3.0.2"
drf-writable-nested = "0.6.3"
gevent = "^22.10.2"
google-cloud = "0.34.0"
python-dotenv = "0.17.1"
sentry-sdk = "1.5.12"
spacy = "^3.7.0"
weasyprint = "59.0"
django-cors-headers = "3.7.0"
django-allauth = "0.44.0"
django-extensions = "3.1.3"
django-notifications-hq = "1.6.0"
django-celery-results = "2.2.0"
django-oso = "0.26.1"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.5"
xlwt = "^1.3.0"
boto3 = "^1.26.34"
google-cloud-core = "1.7.2"
google-cloud-speech = "2.14.0"
google-cloud-storage = "1.44.0"
google-cloud-texttospeech = "2.11.0"
google-cloud-translate = "3.12.0"
google-cloud-vision = "3.1.4"
tablib = "^3.3.0"
djangorestframework-simplejwt = "5.1.0"
langdetect = "1.0.9"
celery-progress = "^0.1.3"
docx2txt = "0.8"
quill-delta = "1.0.3"
lxml = "4.9.1"
cssutils = "1.0.2"
filesplit = "4.0.1"
htmldocx = "0.0.6"
hunspell = "0.5.5"
indic-nlp-library = "0.81"
pydub = "0.25.1"
xlsxwriter = "^3.0.3"
rapidfuzz = "2.13.2"
wiktionaryparser = "0.0.97"
pdftotext = "2.2.2"
pypdf2 = "2.11.1"
pdf2image = "1.16.3"
pypandoc = "1.10"
bcrypt = "^4.0.1"
django-guardian = "2.4.0"
openpyxl = "^3.0.10"
markupsafe = "2.0.1"
django-simple-history = "^3.2.0"
django-dbbackup = "3.3.0"
googletrans = "3.1.0a0"
redis = "^4.4.1"
django-cacheops = "^6.1"
django-silk = "^5.0.3"
django-redis = "^5.2.0"
newrelic = "^8.5.0"
backoff = "2.2.1"
pyspellchecker = "0.6.2"
quickemailverification = "^1.0.3"
extcolors = "^1.0.0"
opencv-contrib-python = "4.7.0.72"
tiktoken = "0.4.0"
channels-redis = "^4.1.0"
symspellpy = "^6.7.7"
pygame = "^2.5.1"
littlecms = "^0.1b3"
pillow-avif-plugin = "^1.3.1"
fonttools = "^4.42.1"
opencv-python = "^4.8.0.76"
img2pdf = "^0.4.4"

pandas = "1.5.2"
python-pptx = "^0.6.22"
onnxruntime = "1.16.0"
unstructured = "0.10.12"
pydantic = "1.10.12"
chromadb = "0.3.29"
pysqlite3-binary = "^0.5.2"
docxcompose = "^1.4.0"
pdfminer-six = "^20221105"
langchain = "^0.0.316"
[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest-django = "^4.5.2"
ipython = "^8.7.0"
django-debug-toolbar = "^3.8.1"
ptvsd = "^4.3.2"




[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
